// This file is auto-generated, DO NOT make any changes here
syntax = "proto2";
package SAP.internal;

import "external/exposurenotification/temporary_exposure_key_export.proto";
import "internal/evreg/check_in.proto";

message SubmissionPayload {
  repeated SAP.external.exposurenotification.TemporaryExposureKey keys = 1;
  optional bytes requestPadding = 2;
  repeated string visitedCountries = 3;
  optional string origin = 4;
  optional bool consentToFederation = 5;
  repeated SAP.internal.evreg.CheckIn checkIns = 6;
}
